Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION 3.0.0
============================

2023-00-00 Jose Kahan
	* src/{hypermail.h, print.c}
	Two enhancements to simplify the understanding of complex structured
	messages when using screen readers.

	For forwarded messages, appending the nesting level-sequence for the
	message.

	Reduced the text "List of stored attachments" to "Attachments for
	message nesting level-sequence" for forwarded messages and just
	"Attachments" for the root message.

	* src/parse.c
	filenames were not being taken int account for text/plain attachment
	with Content-Disposition: attachment and a filename name given only in
	the Content-Type name attribute.

	* aclocal.m4 moved to m4/apr.m4
	We were wrongly storing our local autoconf macros in aclocal.m4.  That
	file is reserved for aclocal and the autotools. We moved our macros to
	m4/apr.m4 (apr is from where we borrowed those macros).

	* src/print.c
	Integrate @bert-github's markup improvements for forwarded messages.
	Replace <div> with <article>, move the <h2> forwarded message from
	below the corresponding <section> parent to article to below <article>
	and move the aria-labelled-by attribute from that <section> to
	<article>.

	* src/{hypermail.h, string.c}
	Increase the max size for a scanned url string to 4096 to reflect
	modern trends.

	* src/parse.c
	parse_old_html() was not unconverting all the protected
	HTML entities (such as &ndash;) from the comments in a
	hypermail archive directory.

	* src/{printfile.c, lang.h}
	Associate title="Normal view" to the default stylesheet to take
	into account someone adding alternate css files by means
	of hypermail's configuration directives.

	* src/{parse.c, setup.c, setup.h}
	New configuration option ignore_content_disposition to be able to
	ignore the Content-Disposition header for some Mime-Types. This is
	particularly useful for old Apple Mail messages that associated